--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -10,10 +10,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Setup elixir
-      uses: actions/setup-elixir@v1
+      uses: erlef/setup-beam@v1
       with:
-        elixir-version: 1.10.1 # Define the elixir version [required]
-        otp-version: 22.2 # Define the OTP version [required]
+        elixir-version: 1.12.2
+        otp-version: 24
     - name: Install Dependencies
       run: mix deps.get
     - name: Run Tests
